orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/Liquidity_Event__c.object-meta.xml
<CustomObject>
    <description>Business sales, large asset transfers, and liquidity events</description>
    <label>Liquidity Event</label>
    <nameField>
        <displayFormat>LIQ-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liquidity Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>