orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/fields/Estimated_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tax__c</fullName>
    <label>Estimated Tax</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>