orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Business Sale</fullName><default>false</default><label>Business Sale</label></value>
            <value><fullName>Real Estate Sale</fullName><default>false</default><label>Real Estate Sale</label></value>
            <value><fullName>Inheritance</fullName><default>false</default><label>Inheritance</label></value>
            <value><fullName>Stock Options/RSU</fullName><default>false</default><label>Stock Options/RSU</label></value>
            <value><fullName>Pension Lump Sum</fullName><default>false</default><label>Pension Lump Sum</label></value>
            <value><fullName>Legal Settlement</fullName><default>false</default><label>Legal Settlement</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>