orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <label>Household</label>
    <type>Lookup</type>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Liquidity Events</relationshipLabel>
    <relationshipName>Liquidity_Events</relationshipName>
</CustomField>