orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/fields/Net_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds__c</fullName>
    <label>Net Proceeds</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>