orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/fields/QSBS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>QSBS_Eligible__c</fullName>
    <label>QSBS Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
            <value><fullName>Yes - Verified</fullName><default>false</default><label>Yes - Verified</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Pending Review</fullName><default>false</default><label>Pending Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>