orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Liquidity_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Planning</fullName><default>true</default><label>Planning</label></value>
            <value><fullName>LOI Signed</fullName><default>false</default><label>LOI Signed</label></value>
            <value><fullName>Due Diligence</fullName><default>false</default><label>Due Diligence</label></value>
            <value><fullName>Closing</fullName><default>false</default><label>Closing</label></value>
            <value><fullName>Closed - Funds Received</fullName><default>false</default><label>Closed - Funds Received</label></value>
            <value><fullName>Post-Close Planning</fullName><default>false</default><label>Post-Close Planning</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>